tests/idris2/error/perror003/PError2.idr
foo : Int -> Int
foo x = x

bar : Int -> Int
bar x = let y := (42 in y + x

baz : Int -> Int
baz x = x
